--- a/AuthForAnyone/appsettings.json
+++ b/AuthForAnyone/appsettings.json
@@ -6,7 +6,14 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection" : "Data Source = OZGUR-DEV; Initial Catalog = AuthForAnyoneDB; Trust Server Certificate = True; User = AUTHSERVER; Password = huawei;"
+    "DefaultConnection": "Data Source = OZGUR-DEV; Initial Catalog = AuthForAnyoneDB; Trust Server Certificate = True; User = AUTHSERVER; Password = huawei;"
   },
+  "JWT": {
+    "PrivateKey": "tLSD65UYcqG0KoxbU1TYXT4ZFSLxzkg5",
+    "Issuer": "https://localhost:7156",
+    "Audience": "authForAnyone",
+    "AccessTokenExpirationTime": "1",
+    "RefreshTokenExpirationTime": "60"
+  }
   "AllowedHosts": "*"
 }
