--- a/AuthenticationService/DataAccess/DataAccess.csproj
+++ b/AuthenticationService/DataAccess/DataAccess.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Identity\Identity.csproj" />
-    <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\..\Models\Models.csproj" />
   </ItemGroup>
 
 </Project>
