Using problems fixed

--- a/AuthForAnyone/appsettings.json
+++ b/AuthForAnyone/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source = OZGUR-DEV; Initial Catalog = AuthForAnyoneDB; Trust Server Certificate = True; User = AUTHSERVER; Password = huawei;"
+    "DefaultConnection": "Data Source = 172.30.65.119; Initial Catalog = PaylasimKuresiDb; Trust Server Certificate = True; User = sa; Password = gpyQ3C3K;"
   },
   "JWT": {
     "PrivateKey": "tLSD65UYcqG0KoxbU1TYXT4ZFSLxzkg5",
