Implemented: Authentication filter for user.

--- a/PaylasimKuresi/appsettings.json
+++ b/PaylasimKuresi/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection" : "Server=172.30.65.119; Database=PaylasimKuresiDb; User Id=sa; Password=gpyQ3C3K; TrustServerCertificate=True"
+  },
+  "JWT" : {
+    "PrivateKey" : "QDBpRfIzNVA6K83NNfJ2UeqIdsGM5naY",
+    "Audience" : "PaylasimKuresi",
+    "Issuer" : "PaylasimKuresi",
+    "AccessTokenExpirationTime" : "1",
+    "RefreshTokenExpirationTime" : "60"
+  },
   "AllowedHosts": "*"
 }
