--- a/PaylasimKuresi/PaylasimKuresi.csproj
+++ b/PaylasimKuresi/PaylasimKuresi.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\Business\Business.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.4" />
+  </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
